[package]
name = "imdb-id"
description = "Get IMDb IDs using a commandline search tool"
categories = ["command-line-utilities"]
version = "2.1.2"
edition = "2021"
rust-version = "1.58"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codeberg.org/alpha-tango-kilo/imdb-id"
repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"

[dependencies]
atty = "0.2"
dirs = "4.0"
humantime = "2.1"
itertools = "0.10"
lazy-regex = "2.2"
lazy_static = "1.4"
opener = "0.5"
serde_json = "1.0"
# https://rustsec.org/advisories/RUSTSEC-2018-0005.html
serde_yaml = { version = ">=0.8.4", optional = true }
# https://rustsec.org/advisories/RUSTSEC-2021-0003.html
smallvec = ">=1.6.1"
thiserror = "1.0"
trim-in-place = "0.1"
urlencoding = "2.1"

[dependencies.clap]
version = "3.0"
default-features = false
features = ["std"]

[dependencies.dialoguer]
version = "0.10"
default-features = false

[dependencies.minreq]
version = "2.5"
features = ["https-rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
once_cell = "1.9"

[features]
default = []
yaml = ["serde_yaml"]

[profile.release]
lto = true
