[package]
name = "imdb-id"
description = "Get IMDb IDs using a commandline search tool"
categories = ["command-line-utilities"]
version = "3.0.4"
edition = "2021"
rust-version = "1.58"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codeberg.org/alpha-tango-kilo/imdb-id"
repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"

[dependencies]
bitflags = "1.3"
crossterm = "0.23"
dirs = "4.0"
humantime = "2.1"
itertools = "0.10"
jsonxf = "1.1"
lazy-regex = "2.2"
opener = "0.5"
once_cell = "1.12"
serde_json = "1.0"
# https://rustsec.org/advisories/RUSTSEC-2018-0005.html
serde_yaml = { version = ">=0.8.4", optional = true }
# https://rustsec.org/advisories/RUSTSEC-2021-0003.html
smallvec = ">=1.6.1"
thiserror = "1.0"
trim-in-place = "0.1"
tui = "0.18"
urlencoding = "2.1"

[dependencies.clap]
version = "3.1"
default-features = false
features = ["std"]

[dependencies.dialoguer]
version = "0.10"
default-features = false

[dependencies.minreq]
version = "2.5"
features = ["https-rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.textwrap]
version = "0.15"
default-features = false
features = ["smawk"]

[features]
default = []
yaml = ["serde_yaml"]

[profile.release]
lto = true
