[package]
name = "imdb-id"
description = "Get IMDb IDs using a commandline search tool"
categories = ["command-line-utilities"]
version = "3.0.6"
edition = "2021"
rust-version = "1.70"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codeberg.org/alpha-tango-kilo/imdb-id"
repository = "https://codeberg.org/alpha-tango-kilo/imdb-id"

[dependencies]
bitflags = "2.4"
crossterm = "0.27"
dirs = "5.0"
humantime = "2.1"
itertools = "0.11"
jsonxf = "1.1"
lazy-regex = "3.0"
opener = "0.6"
once_cell = "1.12"
ratatui = "0.23"
serde_json = "1.0"
# https://rustsec.org/advisories/RUSTSEC-2018-0005.html
serde_yaml = { version = ">=0.8.4", optional = true }
# https://rustsec.org/advisories/RUSTSEC-2021-0003.html
smallvec = ">=1.6.1"
thiserror = "1.0"
trim-in-place = "0.1"
urlencoding = "2.1"

[dependencies.clap]
version = "4.4"
default-features = false
features = [
    "std",
    "help",
    "usage",
    "color",
    "error-context",
    "deprecated",
]

[dependencies.dialoguer]
version = "0.11"
default-features = false

[dependencies.minreq]
version = "2.5"
features = ["https-rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.textwrap]
version = "0.16"
default-features = false
features = ["smawk"]

[features]
default = []
yaml = ["serde_yaml"]

[profile.release]
lto = true
